<resources>
    <string name="app_name">BookKeeping</string>

    <string name="add">添加</string>

    <string name="classification_title">种类</string>
    <string name="classification_add_title">添加种类</string>
    <string name="record_title">统计</string>

    <string name="num_not_null">数字不可为空！</string>

    <string name="add_num">请输入你要增加的数量！</string>
    <string name="del_num">请输入你要减少的数量！</string>

    <string name="menu_name_not_null">产品名称不可为空！</string>
    <string name="menu_num_not_null">产品数量不可为空！</string>

    <string name="add_menu_name">请填写产品名称</string>
    <string name="add_menu_num">请填写产品数量</string>

    <string name="save">保存</string>
</resources>