<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".classification_add.ClassificationAddActivity">

    <RelativeLayout
        android:id="@+id/toppanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_top"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/select"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/task_disease_inspect_execute_appbar_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical|center"
                android:text="@string/classification_add_title"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/task_patrol_appbar_gh1"
                app:layout_constraintRight_toLeftOf="@+id/task_patrol_appbar_gh2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/task_patrol_appbar_gh1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.14" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/task_patrol_appbar_gh2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="354dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/task_patrol_appbar_gh3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66" />

            <ImageButton
                android:id="@+id/task_progress_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/task_patrol_appbar_gh1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/task_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.375"
                app:layout_constraintLeft_toLeftOf="@+id/task_patrol_appbar_gh3"
                app:layout_constraintRight_toRightOf="@id/class_add"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.517" />

            <TextView
                android:id="@+id/class_add"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical|center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.375"
                app:layout_constraintLeft_toLeftOf="@+id/task_patrol_appbar_gh2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.517" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bolder_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toppanel">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:hint="@string/add_menu_name"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:textColorHint="#cdcdcd"
            android:textSize="16dp" />

        <View
            android:id="@+id/view_one"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_name"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:background="#f2f2f2" />

        <EditText
            android:id="@+id/et_num"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/view_one"
            android:layout_alignParentEnd="true"
            android:inputType="number|numberDecimal"
            android:background="@null"
            android:hint="@string/add_menu_num"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:textColorHint="#cdcdcd"
            android:textSize="16dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/rl_body"
        android:background="@color/back_add_color"
        android:textColor="@color/text_color"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>